--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,14 +3,14 @@ brands:
 #- name: kayafx
 #  config_file: kaya_fx.yml
 
-#- name: itrader
-#  config_file: itrader.yml
+- name: itrader
+  config_file: itrader.yml
 
 #- name: itrader_global
 #  config_file: itrader_global.yml
 
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 
 #- name: brokerxp
 #  config_file: brokerxp.yml
