--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -89,8 +89,8 @@ brands:
 #- name: pmt247
 #  config_file: pmt247.yml
 
-- name: proconsultinginvest
-  config_file: proconsultinginvest.yml
+#- name: proconsultinginvest
+#  config_file: proconsultinginvest.yml
 
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -104,8 +104,8 @@ brands:
 #- name: stox50
 #  config_file: stox50.yml
 
-#- name: strattonmarkets-eu
-#  config_file: strattonmarkets-eu.yml
+- name: strattonmarkets-eu
+  config_file: strattonmarkets-eu.yml
 
 #- name: swisscci
 #  config_file: swisscci.yml
