add var provider

--- a/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
@@ -3,3 +3,8 @@ AssetPricePreconditionCA:
   asset: "EURUSD"
 ConvertLeadPreconditionUI:
   convert_lead_currency: "EUR"
+TradingAccountPrecondition:
+  demo_acc_currency: "EUR"
+  demo_acc_leverage: "1:100"
+  live_acc_leverage: "1:100"
+  initial_deposit_amount: "50000"
