--- a/src/test/python/resources/config/tests_sanity.yml
+++ b/src/test/python/resources/config/tests_sanity.yml
@@ -22,16 +22,16 @@ tests_config:
 #    - test_create_lead_api
 #    - test_create_new_customer
 #
-- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-  class: SignUpTest
-  tests:
-    - test_check_sign_up
-
-- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
-  class: AddNewAccountTestCA
-  tests:
-    - test_add_live_account_ca
-    - test_add_demo_account_ca
+#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+#  class: SignUpTest
+#  tests:
+#    - test_check_sign_up
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+#  class: AddNewAccountTestCA
+#  tests:
+#    - test_add_live_account_ca
+#    - test_add_demo_account_ca
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Pages_CA
 #  class: TestPagesCA
@@ -42,10 +42,10 @@ tests_config:
   class: TradingProcess
   tests:
 #    - test_crypto_quotes
-    - test_trading_process_open_position_ca    # open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-    - test_verify_open_position_crm     # verify in crm open position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME
-    - test_trading_process_close_position_ca      # close position, get OPEN PRICE, ORDER ID, SYMBOL, CREATED TIME, CLOSE TIME, CLOSE PRICE, PROFIT
-    - test_verify_close_position_crm
+    - test_open_position_live
+    - test_verify_live_open_position_crm
+    - test_close_position_live
+    - test_verify_live_close_position_crm
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModulesTest
