--- a/src/test/python/resources/config/Brands/alferatrade.yml
+++ b/src/test/python/resources/config/Brands/alferatrade.yml
@@ -3,4 +3,4 @@ url: "https://alferatrade.ptscrm.com/"
 url_ca: "https://alferatrade.com/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
-number_live_acc: "32342"
+number_live_acc: "81870169"
