--- a/src/main/python/ui/crm/model/BrandsXpath/newforexstage2_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/newforexstage2_xpath.yml
@@ -1,5 +1,4 @@
-CALoginPage:
-  login_btn_2: "//button[@class = 'forex-button-pandats login-button-pandats'][contains(text(), 'Login')]"
+# ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
 LeadsModule:
   check_first_line_email_1: "//tbody[@id = 'listBody']/tr[1]/td[8]"
   check_first_line_email_2: "//tbody[@id = 'listBody']/tr[2]/td[8]"
