--- a/src/main/python/ui/crm/model/BrandsVariables/strattonmarkets-eu_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/strattonmarkets-eu_vars.yml
@@ -1,3 +1,4 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
 TradingAccountPrecondition:
+  demo_acc_leverage: "1:30"
   live_acc_leverage: "1:30"
