--- a/src/test/python/resources/config/Brands/dualix.yml
+++ b/src/test/python/resources/config/Brands/dualix.yml
@@ -3,4 +3,4 @@ url: "https://dualix.ptscrm.com/"
 url_ca: "https://dualix.maxigrid.com/#/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
-number_live_acc: "32342"
+number_live_acc: "81903028"
