--- a/src/test/python/resources/config/tests_sanity.yml
+++ b/src/test/python/resources/config/tests_sanity.yml
@@ -15,17 +15,17 @@ tests_config:
 #  class: WithdrawTest
 #  tests:
 #    - test_withdraw_crm   #preconditions: convert lead, make deposit
-#
+
 #- module: src.test.python.ui.automation.implementation.api.Test_API
 #  class: TestAPI
 #  tests:
 #    - test_create_lead_api
 #    - test_create_new_customer
 #
-#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-#  class: SignUpTest
-#  tests:
-#    - test_check_sign_up
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
 #  class: AddNewAccountTestCA
@@ -38,14 +38,14 @@ tests_config:
 #  tests:
 #    - test_main_menu_pages_loading
 
-- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
-  class: TradingProcess
-  tests:
+#- module: src.test.python.ui.automation.implementation.ca.Test_Trading_Process
+#  class: TradingProcess
+#  tests:
 #    - test_crypto_quotes
-    - test_open_position_live
-    - test_verify_live_open_position_crm
-    - test_close_position_live
-    - test_verify_live_close_position_crm
+#    - test_open_position_live
+#    - test_verify_live_open_position_crm
+#    - test_close_position_live
+#    - test_verify_live_close_position_crm
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
 #  class: CheckModulesTest
