--- a/src/main/python/ui/crm/model/BrandsVariables/trade99_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/trade99_vars.yml
@@ -1,4 +1,7 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
+DepositTestCRM:
+  live_acc_currency: "BTC"
+  live_acc_group: "real"
 TradingAccountPrecondition:
   demo_acc_currency: "BTC"
   initial_deposit_amount: "10"
