--- a/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
@@ -45,3 +45,5 @@ TradingAccountPrecondition:
   live_acc_server: "Live"
 TradingPreconditionLive:
   asset: "XRPUSD"
+WorkflowsPrecondition:
+  client_status: "B - Test"
