--- a/src/main/python/ui/crm/model/BrandsVariables/q8_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/q8_vars.yml
@@ -3,3 +3,5 @@ CryptoQuotesPreconditionCA:
   asset: "AUDUSD"
 TradingPreconditionLive:
   asset: "AUDUSD"
+WorkflowsPrecondition:
+  client_status: "Not Interested"
