--- a/src/main/python/ui/crm/model/BrandsVariables/trade99_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/trade99_vars.yml
@@ -2,6 +2,9 @@
 DepositTestCRM:
   live_acc_currency: "BTC"
   live_acc_group: "real"
+LeadPrecondition:
+  m_assign_lead_status: "New"
+  m_edit_lead_status: "New"
 TradingAccountPrecondition:
   demo_acc_currency: "BTC"
   initial_deposit_amount: "10"
