--- a/src/main/python/ui/crm/model/BrandsXpath/aztrades_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/aztrades_xpath.yml
@@ -9,3 +9,5 @@ LeadsModule:
   check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[2]"
   check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
   mass_edit_leads: "//*[@id='list_action_buttons']/input[1]"
+  l_status_table: "//tbody[@id = 'listBody']/tr[%s]/td[6]"
+  l_assign_table: "//tbody[@id = 'listBody']/tr[%s]/td[13]"
