--- a/src/main/python/ui/crm/model/BrandsXpath/brokerz_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/brokerz_xpath.yml
@@ -27,3 +27,5 @@ LeadsModule:
   check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[10]"
   check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[2]"
   check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
+  l_status_table: "//tbody[@id = 'listBody']/tr[%s]/td[6]"
+  l_assign_table: "//tbody[@id = 'listBody']/tr[%s]/td[13]"
