--- a/src/main/python/ui/crm/model/BrandsXpath/tradixa_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/tradixa_xpath.yml
@@ -1,3 +1,7 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
 CADepositPage:
   deposit_page: "//a[@class='paymentbutton' and @title='Click to Deposit']"
+LeadsModule:
+  check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[2]"
+  check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
+  l_status_table: "//tbody[@id = 'listBody']/tr[%s]/td[6]"
