--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,14 +1,14 @@
 tests_config:
 
 ###################################### MY DASHBOARD TESTS ########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-  class: MyDashboardActionsTest
-  tests:
-    - test_edit_event_my_dashboard
-    - test_email_icon
-    - test_sms_icon
-    - test_sorting_columns
-    - test_searching_by_columns
+#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+#  class: MyDashboardActionsTest
+#  tests:
+#    - test_edit_event_my_dashboard
+#    - test_email_icon
+#    - test_sms_icon
+#    - test_sorting_columns
+#    - test_searching_by_columns
 #
 ######################################## FILTERS TESTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
@@ -21,12 +21,12 @@ tests_config:
 #    - test_create_filter_trading_account_module
 #
 ########################################## LEADS ###################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
 #    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
 #    - sorting_lead_module
-#    - test_mass_assign_leads
+    - test_mass_assign_leads
 #    - test_mass_edit_leads
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
