--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -11,10 +11,10 @@ tests_config:
 #    - test_searching_by_columns
 
 ######################################## FILTERS TESTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
-#  class: TestFiltersUI
-#  tests:
-#    - test_filter_clients_ui
+- module: src.test.python.ui.automation.implementation.crm.tests_global_crm_ui.TestFiltersUI
+  class: TestFiltersUI
+  tests:
+    - test_filter_clients_ui
 #    - test_filter_leads_ui
 #    - test_filter_documents_ui
 #    - test_filter_help_desk_ui
