--- a/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
@@ -5,6 +5,7 @@ AssetPricePreconditionCA:
   asset: "EURUSD"
 ConvertLeadPreconditionUI:
   convert_lead_currency: "EUR"
+  field_citizenship: "Citizenship"
 CryptoQuotesPreconditionCA:
   asset: "BTCEUR"
 DepositCAPrecondition:
@@ -44,10 +45,15 @@ LoginCAPrecondition:
   client_name: "Test"
 MT4CreateTAPreconditionUI:
   create_mt_user: "Create MT User"
+  d_acc_currency: "USD"
 MT4CreditInPreconditionUI:
   create_mt_user: "Create MT User"
+  l_acc_currency: "USD"
+  live_acc_group: "live"
 MT4DepositPreconditionUI:
   create_mt_user: "Create MT User"
+  live_acc_group: "live"
+  l_acc_currency: "USD"
 TradingAccountPrecondition:
   demo_acc_currency: "EUR"
   demo_acc_currency_usd: "USD"
