--- a/src/main/python/ui/crm/model/BrandsVariables/fairbit_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/fairbit_vars.yml
@@ -3,11 +3,17 @@ AssetPricePreconditionCA:
   asset: "ETCEUR"
 ConvertLeadPreconditionUI:
   convert_lead_currency: "UST"
+  field_citizenship: "Nationality"
 MT4CreateTAPreconditionUI:
   create_mt_user: "Create Trading Account"
+  d_acc_currency: "UST"
 MT4CreditInPreconditionUI:
   create_mt_user: "Create Trading Account"
+  live_acc_group: "UST1"
+  l_acc_currency: "UST"
 MT4DepositPreconditionUI:
   create_mt_user: "Create Trading Account"
+  live_acc_group: "UST1"
+  l_acc_currency: "UST"
 TradingAccountPrecondition:
   demo_acc_currency: "UST"
