--- a/src/test/python/resources/config/tests_new_ui.yml
+++ b/src/test/python/resources/config/tests_new_ui.yml
@@ -22,6 +22,7 @@ tests_config:
 
 ########################################## LEADS ###################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+  directive: reload_configuration
   class: TestLeadsModuleUI
   tests:
 #    - test_leads_searching_columns_ui
@@ -38,10 +39,11 @@ tests_config:
 #    - test_mass_edit_clients_ui
 
 ######################################### MT4 ACTIONS ###########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
-#  class: TestMT4UI
-#  tests:
-#    - test_create_demo_ta_ui
+- module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
+  directive: reload_configuration
+  class: TestMT4UI
+  tests:
+    - test_create_demo_ta_ui
 #    - test_deposit_crm_ui  # create live mt account and make deposit
 #    - test_withdraw_crm_ui
 #    - test_credit_in_crm_ui
