--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -62,8 +62,8 @@ brands:
 #- name: libramarkets
 #  config_file: libramarkets.yml
 
-#- name: marketrip
-#  config_file: marketrip.yml
+- name: marketrip
+  config_file: marketrip.yml
 
 #- name: moneta
 #  config_file: moneta.yml
@@ -71,8 +71,8 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
