--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -10,7 +10,7 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_mt4_ui.TestMT4UI
   class: TestMT4UI
   tests:
-    - test_create_demo_trading_account_ui
+    - test_create_demo_ta_ui
     - test_deposit_crm_ui  # create live mt account and make deposit
     - test_withdraw_crm_ui
     - test_credit_in_crm_ui
