--- a/src/test/python/resources/config/Brands/metadoro.yml
+++ b/src/test/python/resources/config/Brands/metadoro.yml
@@ -1,6 +1,6 @@
-pretty_name: "GTStox"
-url: "https://gtstox.ptscrm.com/"
-url_ca: "https://gtstox.com/"
+pretty_name: "Metadoro"
+url: "https://metadoro.ptscrm.com/"
+url_ca: "https://metadoro.com/"
 email_live_acc: "QATest@pandats.com"
 password_live_acc: "testingQA12"
 number_live_acc: "32342"
