--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -23,11 +23,8 @@ brands:
 #- name: confixfinancial
 #  config_file: confixfinancial.yml
 
-#- name: ctxprime
-#  config_file: ctxprime.yml
-
-#- name: dax-300
-#  config_file: dax-300.yml
+- name: ctxprime
+  config_file: ctxprime.yml
 
 #- name: dualix
 #  config_file: dualix.yml
@@ -37,6 +34,9 @@ brands:
 
 #- name: fairbit
 #  config_file: fair-bit.yml
+
+#- name: fbrokers
+#  config_file: fbrokers.yml
 
 #- name: financix
 #  config_file: financix.yml
@@ -50,12 +50,6 @@ brands:
 #- name: gtstox
 #  config_file: gtstox.yml
 
-#- name: hizlifx
-#  config_file: hizlifx.yml
-
-#- name: jonesmutual
-#  config_file: jonesmutual.yml
-
 #- name: kontofx
 #  config_file: kontofx.yml
 
@@ -64,6 +58,9 @@ brands:
 
 #- name: marketrip
 #  config_file: marketrip.yml
+
+#- name: metadoro
+#  config_file: metadoro.yml
 
 #- name: moneta
 #  config_file: moneta.yml
@@ -104,29 +101,14 @@ brands:
 #- name: solocapitlas
 #  config_file: solocapitlas.yml
 
-#- name: stox50
-#  config_file: stox50.yml
-
 #- name: strattonmarkets-eu
 #  config_file: strattonmarkets-eu.yml
 
-#- name: swisscci
-#  config_file: swisscci.yml
+#- name: trade99
+#  config_file: trade99.yml
 
-#- name: tfxgo
-#  config_file: tfxgo.yml
-
-- name: trade99
-  config_file: trade99.yml
-
-#- name: tradenero
-#  config_file: tradenero.yml
-
-- name: tradixa
-  config_file: tradixa.yml
-
-#- name: uft
-#  config_file: uft.yml
+#- name: tradixa
+#  config_file: tradixa.yml
 
 #- name: uprofx
 #  config_file: uprofx.yml
