--- a/src/test/python/resources/config/tests_ca_ui.yml
+++ b/src/test/python/resources/config/tests_ca_ui.yml
@@ -1,9 +1,9 @@
 tests_config:
 
-#- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
-#  class: SignUpTest
-#  tests:
-#    - test_check_sign_up
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
 #    - test_registred_client_in_crm_new_ui
 #
 #- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
