--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -21,14 +21,14 @@ tests_config:
 #    - test_filter_ta_ui
 
 ########################################## LEADS ###################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
-#  directive: reload_configuration
-#  class: TestLeadsModuleUI
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module_ui.TestLeadsModuleUI
+  directive: reload_configuration
+  class: TestLeadsModuleUI
+  tests:
 #    - test_leads_searching_columns_ui
 #    - test_mass_assign_leads_ui
 #    - test_mass_edit_leads_ui
-#    - test_convert_lead_ui   # Creates a lead and converts it to a client
+    - test_convert_lead_ui   # Creates a lead and converts it to a client
 
 ############################################## CLIENTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.Test_Clients_Module_UI
@@ -88,8 +88,9 @@ tests_config:
 #    - test_audit_logs_searching_columns_ui
 
 ############################################## TASKS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
-  class: TestTasksModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
+#  class: TestTasksModuleUI
+#  tests:
 #    - test_tasks_searching_columns_ui
-    - test_add_delete_event_ui
+#    - test_add_delete_event_ui
+#    - test_tasks_mass_edit
