--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -23,8 +23,8 @@ brands:
 #- name: confixfinancial
 #  config_file: confixfinancial.yml
 
-- name: ctxprime
-  config_file: ctxprime.yml
+#- name: ctxprime
+#  config_file: ctxprime.yml
 
 #- name: dualix
 #  config_file: dualix.yml
@@ -107,8 +107,8 @@ brands:
 #- name: trade99
 #  config_file: trade99.yml
 
-#- name: tradixa
-#  config_file: tradixa.yml
+- name: tradixa
+  config_file: tradixa.yml
 
 #- name: uprofx
 #  config_file: uprofx.yml
