--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -41,8 +41,8 @@ brands:
 #- name: financix
 #  config_file: financix.yml
 
-- name: globalix
-  config_file: globalix.yml
+#- name: globalix
+#  config_file: globalix.yml
 
 #- name: grandefex
 #  config_file: grandefex.yml
@@ -56,8 +56,8 @@ brands:
 #- name: libramarkets
 #  config_file: libramarkets.yml
 
-#- name: marketrip
-#  config_file: marketrip.yml
+- name: marketrip
+  config_file: marketrip.yml
 
 #- name: metadoro
 #  config_file: metadoro.yml
