--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -4,7 +4,7 @@ tests_config:
   class: SignUpTest
   tests:
     - test_check_sign_up
-    - test_check_email_sign_up
+#    - test_check_email_sign_up
     - test_registred_client_exist_in_crm
 
 - module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Live_Accounts
