update convert lead, mt4 actions tests: default currency instead of selected

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -80,8 +80,8 @@ brands:
 #- name: newcrmui
 #  config_file: newcrmui.yml
 
-- name: octagontrade
-  config_file: octagontrade.yml
+#- name: octagontrade
+#  config_file: octagontrade.yml
 
 #- name: olympiamarkets
 #  config_file: olympiamarkets.yml
