add new ui test:MODULE_UM add new user

--- a/src/test/python/resources/config/tests_ui.yml
+++ b/src/test/python/resources/config/tests_ui.yml
@@ -38,6 +38,10 @@ tests_config:
 #    - test_clients_searching_columns_ui
 #    - test_mass_assign_clients_ui
 #    - test_mass_edit_clients_ui
+
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module_ui.TestClientDetailsUI
+#  class: TestClientDetailsUI
+#  tests:
 #    - test_edit_client_ui
 #    - test_add_interaction_ui
 
@@ -92,11 +96,17 @@ tests_config:
 #    - test_audit_logs_searching_columns_ui
 
 ############################################## TASKS ################################################
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
-  class: TestTasksModuleUI
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_ui.TestTasksModuleUI
+#  class: TestTasksModuleUI
+#  tests:
 #    - test_tasks_searching_columns_ui
-    - test_add_event_ui
-    - test_delete_event_ui
+#    - test_add_event_ui
+#    - test_delete_event_ui
 #    - test_tasks_mass_edit
 #    - test_tasks_email_ui
+
+########################################### USER MANAGEMENT ##########################################
+- module: src.test.python.ui.automation.implementation.crm.tests_user_management_ui.TestUserManagementUI
+  class: TestUserManagementUI
+  tests:
+    - test_create_user_ui
