new brand settings

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,6 +2,9 @@
 
 brands:
 
+- name: newbrand
+  config_file: C:/Users/Administrator/Desktop/newbrand.yml
+
 #- name: alferatrade
 #  config_file: alferatrade.yml
 
@@ -68,8 +71,8 @@ brands:
 #- name: newrichmarkets
 #  config_file: newrichmarkets.yml
 
-- name: newforexstage2
-  config_file: newforexstage2.yml
+#- name: newforexstage2
+#  config_file: newforexstage2.yml
 
 #- name: newforexdev3
 #  config_file: newforexdev3.yml
