new brand settings

--- a/src/main/python/ui/crm/model/BrandsVariables/dax-300_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/dax-300_vars.yml
@@ -1,4 +1,6 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
+CreateUserPreconditionUI:
+  role: "Vice President"
 DepositTestCRM:
   live_acc_currency: "EUR"
   live_acc_group: "EUR"
