--- a/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/default_vars.yml
@@ -9,6 +9,8 @@ ClientsMassEditPreconditionUI:
 ConvertLeadPreconditionUI:
   convert_lead_currency: "EUR"
   field_citizenship: "Citizenship"
+CreateUserPreconditionUI:
+  role: "Support Rep"
 CryptoQuotesPreconditionCA:
   asset: "BTCEUR"
 DepositCAPrecondition:
