--- a/src/main/python/ui/crm/model/BrandsVariables/q8_vars.yml
+++ b/src/main/python/ui/crm/model/BrandsVariables/q8_vars.yml
@@ -1,4 +1,6 @@
 # ATTENTION! KEEP NAMES OF PAGES IN ALPHABETICAL ORDER
+CreateUserPreconditionUI:
+  role: "Vice President"
 CryptoQuotesPreconditionCA:
   asset: "AUDUSD"
 DepositCAPrecondition:
